setup structure and translation support

--- a/.gitignore
+++ b/.gitignore
@@ -21,3 +21,9 @@
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+
+notes.txt
+Test task specification.md
+rock_paper_scissors_1.png
+rock_paper_scissors_2.png
+rock_paper_scissors_3.png
