--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "i18next-http-backend": "^2.5.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-feather": "^2.0.10",
     "react-i18next": "^14.1.2",
     "react-scripts": "5.0.1",
     "typescript": "^4.9.5",
